[gd_scene load_steps=11 format=3 uid="uid://xoexpv2nvi44"]

[ext_resource type="Script" path="res://main_website.gd" id="1_uphle"]
[ext_resource type="Texture2D" uid="uid://b1jth5t8wjkbx" path="res://Textures/BgWithGuy.png" id="2_if1vc"]
[ext_resource type="Texture2D" uid="uid://rfn0ymqis7f0" path="res://Textures/RpgIcon.png" id="3_sv16l"]
[ext_resource type="Texture2D" uid="uid://baix1f44arsgc" path="res://Textures/RpgIconSmall.png" id="4_6jfhy"]
[ext_resource type="Texture2D" uid="uid://cfye8ebq41hl8" path="res://Textures/ButtonArrow.png" id="5_dvj8w"]
[ext_resource type="FontFile" uid="uid://7lr4oila1xl6" path="res://Roboto/Roboto-Bold.ttf" id="6_l7y6f"]
[ext_resource type="Texture2D" uid="uid://brlejvk5oi7be" path="res://Textures/SocialIcons/youtube.png" id="7_h8gic"]
[ext_resource type="Texture2D" uid="uid://e86d71iypgj0" path="res://Textures/SocialIcons/insta.png" id="8_3vy1e"]
[ext_resource type="Script" path="res://texture_button_hover_green.gd" id="8_abvng"]
[ext_resource type="Texture2D" uid="uid://cfjy31yj8ki5r" path="res://Textures/SocialIcons/tiktok.png" id="9_25wbf"]

[node name="main_website" type="Node"]
script = ExtResource("1_uphle")

[node name="main_website_container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="bg_with_guy" type="TextureRect" parent="main_website_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_if1vc")
expand_mode = 1
stretch_mode = 5

[node name="bg_white_shader" type="ColorRect" parent="main_website_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.443137)

[node name="bg_rpg_logo" type="TextureRect" parent="main_website_container"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -321.0
offset_top = 43.0
offset_right = 72.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_sv16l")
expand_mode = 1
stretch_mode = 5

[node name="top_part" type="Control" parent="main_website_container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="button_rpg_logo" type="TextureButton" parent="main_website_container/top_part"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = 61.0
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_6jfhy")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="main_website_container/top_part"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -40.0
offset_right = 552.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="button_blog" type="TextureButton" parent="main_website_container/top_part/HBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_hover = ExtResource("5_dvj8w")
texture_disabled = ExtResource("5_dvj8w")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="main_website_container/top_part/HBoxContainer/button_blog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_l7y6f")
theme_override_font_sizes/font_size = 24
text = "BLOG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_video" type="TextureButton" parent="main_website_container/top_part/HBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_hover = ExtResource("5_dvj8w")
texture_disabled = ExtResource("5_dvj8w")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="main_website_container/top_part/HBoxContainer/button_video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_l7y6f")
theme_override_font_sizes/font_size = 24
text = "VIDEO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_faq" type="TextureButton" parent="main_website_container/top_part/HBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_hover = ExtResource("5_dvj8w")
texture_disabled = ExtResource("5_dvj8w")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="main_website_container/top_part/HBoxContainer/button_faq"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_l7y6f")
theme_override_font_sizes/font_size = 24
text = "FAQ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_about" type="TextureButton" parent="main_website_container/top_part/HBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_hover = ExtResource("5_dvj8w")
texture_disabled = ExtResource("5_dvj8w")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="main_website_container/top_part/HBoxContainer/button_about"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_l7y6f")
theme_override_font_sizes/font_size = 24
text = "ABOUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_contact" type="TextureButton" parent="main_website_container/top_part/HBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_hover = ExtResource("5_dvj8w")
texture_disabled = ExtResource("5_dvj8w")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="main_website_container/top_part/HBoxContainer/button_contact"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_l7y6f")
theme_override_font_sizes/font_size = 24
text = "CONTACT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom_part" type="Control" parent="main_website_container"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="main_website_container/bottom_part"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -20.0
offset_right = 552.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120
alignment = 1

[node name="button_youtube" type="TextureButton" parent="main_website_container/bottom_part/HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_h8gic")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("8_abvng")

[node name="button_ig" type="TextureButton" parent="main_website_container/bottom_part/HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_3vy1e")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("8_abvng")

[node name="button_tiktok" type="TextureButton" parent="main_website_container/bottom_part/HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_25wbf")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("8_abvng")
